add login functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 					<li><a href="#">New Task</a></li>
 					<li><a href="#">Manage Categories</a></li>
 					<li><a href="#">Log Out</a></li>
-					<li><a href="#">Log In</a></li>
+					<li><a href="{{ url_for('login') }}">Log In</a></li>
 					<li><a href="{{ url_for('register') }}">Register</a></li>
 				</ul>
 			</div>
@@ -45,7 +45,7 @@
 			<li><a href="#">New Task</a></li>
 			<li><a href="#">Manage Categories</a></li>
 			<li><a href="#">Log Out</a></li>
-			<li><a href="#">Log In</a></li>
+			<li><a href="{{ url_for('login') }}">Log In</a></li>
 			<li><a href="{{ url_for('register') }}">Register</a></li>
 		</ul>
 
@@ -53,13 +53,11 @@
 
     <section>
         <!-- flash messages -->
-        {% with message = get_flashed_messages() %}
+        {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="light-blue lighten-4 center-align">
-                            {{ message }}
-                        </h4>
+                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
